tests/snapshots/run_wpt_conformance__litert_logicalXor_uint8_broadcast_3D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "logical_xor.https.any.js",
    "logicalXor uint8 broadcast 3D to 4D",
    "litert",
    "PASS",
)
