tests/snapshots/run_wpt_conformance__litert_logicalXor_uint8_broadcasting_two_5D_inputs_with_a_leading_batch_size_of_1.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_xor.https.any.js logicalXor uint8 broadcasting two 5D inputs with a leading batch size of 1, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LogicalXor { a: 0, b: 1, options: Some(MLOperatorOptions { label: "" }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[1, 2, 1, 1, 3];
    inputB: u8[1, 2, 2, 1, 1];
  }

  nodes {
    [output] = logicalXor(inputA, inputB, label="");
  }

  outputs { output; }
}
