tests/snapshots/run_wpt_conformance__litert_lstmCell_float16_tensors_with_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lstm_cell.https.any.js lstmCell float16 tensors with all options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: LstmCell { input: 3, weight: 7, recurrence: 6, hidden_state: 2, cell_state: 1, hidden_size: 2, options: Some(MLLstmCellOptions { label: "", bias: Some(0), recurrent_bias: Some(5), peephole_weight: Some(4), layout: "iofg", activations: Some(["relu", "relu", "relu"]) }), outputs: [8, 9] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    lstmCellCellState: f16[2, 2];
    lstmCellHiddenState: f16[2, 2];
    lstmCellInput: f16[2, 2];
  }

  consts {
    operand_0: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_4: f16[6] @bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);
    operand_5: f16[8] @bytes([0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64, 0, 60, 0, 64]);
    operand_6: f16[8, 2] @bytes([102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46, 102, 46]);
    operand_7: f16[8, 2] @bytes([0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192, 0, 60, 0, 188, 0, 64, 0, 192]);
  }

  nodes {
    [lstmCellOutput1, lstmCellOutput2] = lstmCell(lstmCellInput, operand_7, operand_6, lstmCellHiddenState, lstmCellCellState, activations=["relu", "relu", "relu"], bias=0, label="", layout="iofg", peepholeWeight=4, recurrentBias=5);
  }

  outputs { lstmCellOutput1; lstmCellOutput2; }
}
